# My_Hailo

./: README.md
HAILO/HailoRT/Asynchronous_inference/: CMakeLists.txt  README.md  coco_eighty.hpp  hailo_infer.cpp  main.cpp  toolbox.cpp  toolbox.hpp  utils.cpp  utils.hpp
HAILO/HailoRT/Synchronous_inference/: CMakeLists.txt  README.md  inference_usb.cpp
HAILO/MediaLibrary/: CMakeLists.txt  README.md  main.cpp  my_detection_stage.hpp
